--- a/ReactVersion/portfolio/package.json
+++ b/ReactVersion/portfolio/package.json
@@ -15,7 +15,7 @@
     "bootstrap-icons": "^1.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "web-vitals": "^2.1.4"
@@ -43,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "eslint": "^8.32.0"
   }
 }
