--- a/ReactVersion/portfolio/package.json
+++ b/ReactVersion/portfolio/package.json
@@ -15,7 +15,6 @@
     "bootstrap-icons": "^1.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "web-vitals": "^2.1.4"
@@ -49,6 +48,7 @@
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
-    "eslint": "^8.32.0"
+    "eslint": "^8.32.0",
+    "react-router-dom": "^6.7.0"
   }
 }
