--- a/ReactVersion/portfolio/package.json
+++ b/ReactVersion/portfolio/package.json
@@ -3,20 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "babel-plugin-macros": "^3.1.0",
-    "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.3",
+    "@testing-library/user-event": "^14.4.3",
+    "bootstrap": "^5.1.3",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.5",
+    "react-spring": "^9.4.5-beta.1",
+    "reactstrap": "^9.0.1",
+    "redux-logger": "^3.0.6",
+    "typeface-lobster": "^1.1.13",
+    "typeface-open-sans": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,13 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.2",
-    "eslint": "^8.32.0",
-    "react-router-dom": "^6.7.0"
   }
 }
