--- a/ReactVersion/portfolio/package.json
+++ b/ReactVersion/portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://njwright92.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,7 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
