--- a/ReactVersion/portfolio/package.json
+++ b/ReactVersion/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://njwright92.github.io/",
+  "homepage": "https://njwright92.github.io/portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
