--- a/ReactVersion/package.json
+++ b/ReactVersion/package.json
@@ -10,12 +10,10 @@
     "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
-    "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "gh-pages": "^5.0.0",
     "mdb-react-ui-kit": "^5.1.0",
-    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -34,8 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "go": "node server"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
